[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Battler.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Babaa.png" type="Texture" id=3]
[ext_resource path="res://Scenes/TileSelector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/MiniBeasts/BabaaStats.tres" type="Resource" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Damage"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.201, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 2.63902, 1, 0.420448 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0.929412 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Battler" type="Position2D"]
z_index = 1
script = ExtResource( 2 )
stats = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 128, 128 )

[node name="TileSelector" parent="." instance=ExtResource( 4 )]
visible = false
z_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 1 )
anims/Death = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="MoveList" type="Node2D" parent="."]

[node name="AttackSelectors" type="Node2D" parent="."]
